--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>대전고 3-5</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+  <link rel="stylesheet" href="main.css">
 
 
 </head>
@@ -14,7 +14,7 @@
 <body class="background">
 
   <div title="main_name" class="main_name1" id="background">
-    <h1>위대한 장정현의 반</h1>
+    <h1>사랑하는 대전고등학교 3학년 5반</h1>
 
   </div>
 
