--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>대전고 3-5</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 
 
 </head>
